--- a/form_pj/form_app/static/form_app/css/style.css
+++ b/form_pj/form_app/static/form_app/css/style.css
@@ -1,6 +1,55 @@
 h1 {
-    color: #364e96;/*文字色*/
-    padding: 0.5em 0;/*上下の余白*/
-    border-top: solid 3px #364e96;/*上線*/
-    border-bottom: solid 3px #364e96;/*下線*/
-  }
+  color: #364e96;/*文字色*/
+  padding: 0.5em 0;/*上下の余白*/
+  border-top: solid 3px #364e96;/*上線*/
+  border-bottom: solid 3px #364e96;/*下線*/
+}
+body {
+  width: 100%;
+}
+  
+h2 {
+    text-align: center;
+}
+
+table.list_table {
+  border-collapse: collapse;
+  margin: 100 auto;
+  padding: 0;
+  width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  box-shadow: 0 0 15px -6px #00000073;
+}
+
+table.list_table tr {
+  background-color: #fff;
+}
+
+table.list_table th,
+table.list_table td {
+  padding: 20px 0;
+  border-bottom: 1px solid #eee;
+}
+
+table.list_table th {
+  width: 20%;
+  padding: 10px 0;
+  font-size: 14px;
+  padding: 15px;
+  background-color: #4169e1;
+  color:#fff;
+}
+
+table.list_table tr{
+  text-align: center;
+  width: 20%;
+  padding: 20px 0;
+  background-color: #fff;
+  color:#3a3a3a;
+}
+
+table.list_table tr:hover{
+  background-color: #d4faff;
+}
+
