--- a/form_pj/form_app/templates/form_apps/index.html
+++ b/form_pj/form_app/templates/form_apps/index.html
@@ -7,18 +7,13 @@
     <link rel="stylesheet" type="text/css" href="{% static 'form_app/css/style.css' %}" >
 </head>
 <body>
-    <h1>FORM TEST.</h1>
-    <form action="{% url 'form' %}" method="post">
-        {% csrf_token %}
-        <table>
-            {{formAppForm}}
-        </table>
-        <input type="submit" value="click">
-    </form>
+    <h1>TEST_EMPS Management</h1>
     <br>
+    <ul>
+        <li><a href={% url 'refer' %}>TEST_EMPS Refer</a></li>
+        <li><a href={% url 'entry' %}>TEST_EMPS New Entry</a></li>
+    </ul>
     <hr>
-    <h2>{{param.sub_title}}</h2>
-    <p>{{param.name}}</p>
-    <p>{{param.password}}</p>
+
 </body>
 </html>
