--- a/form_pj/form_app/templates/form_apps/index.html
+++ b/form_pj/form_app/templates/form_apps/index.html
@@ -11,7 +11,7 @@
     <br>
     <ul>
         <li><a href={% url 'refer' %}>TEST_EMPS Refer</a></li>
-        <li><a href={% url 'entry' %}>TEST_EMPS New Entry</a></li>
+        <li><a href={% url 'entryInit' %}>TEST_EMPS New Entry</a></li>
     </ul>
     <hr>
 
